Attempt to fix blue fonts on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 }
 
 * {
+  color: black;
   box-sizing: border-box;
 }
 
